Bug 1303570 - Part 1: Support Subpixel AA drawing of DWrite fonts to transparent GDI surfaces. r=jrmuizel, a=gchang

MozReview-Commit-ID: JzkE1s9A0UI

--HG--
extra : source : 0963e4f0247107ded32c61eaf889a5b61170303e